--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -10,8 +10,9 @@
     <string name="duke" />
     <string name="captain" />
     <string name="assassin" />
+    <string name="back_button_description">Go back</string>
 
-        <string name="win_button_text">WIN</string>
+    <string name="win_button_text">WIN</string>
         <string name="loss_button_text">LOSS</string>
 
 
